--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -389,110 +389,7 @@
             <div class="upcoming-appointments">
                 <h2>Próximas Citas</h2>
                 <div class="appointments-grid">
-                    <!-- Cita 1 -->
-                    <div class="appointment-card">
-                        <div class="appointment-header">
-                            <div class="appointment-date">
-                                <span class="day">15</span>
-                                <span class="month">Mayo</span>
-                            </div>
-                            <div class="appointment-time">
-                                <span class="time-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="18" height="18" viewBox="0 0 148.000000 148.000000" preserveAspectRatio="xMidYMid meet">
-                                        <g transform="translate(0.000000,148.000000) scale(0.100000,-0.100000)" fill="#ffffff" stroke="none">
-                                        <path d="M635 1471 c-295 -47 -526 -252 -606 -536 -32 -112 -32 -278 0 -390 71 -253 263 -445 516 -516 112 -32 278 -32 390 0 253 71 445 263 516 516 29 103 31 277 5 375 -42 153 -82 202 -135 162 -33 -24 -32 -52 4 -150 157 -436 -250 -893 -710 -797 -232 48 -432 248 -480 480 -29 141 -11 268 57 405 101 200 324 339 545 340 115 0 264 -48 361 -117 54 -38 74 -41 102 -13 47 47 11 96 -120 164 -124 65 -313 98 -445 77z"/>
-                                        <path d="M696 1208 c-13 -19 -16 -61 -16 -255 0 -220 1 -234 20 -253 18 -18 33 -20 195 -20 162 0 177 2 195 20 11 11 20 29 20 40 0 11 -9 29 -20 40 -18 18 -33 20 -155 20 l-135 0 0 193 c0 215 -6 237 -60 237 -18 0 -34 -8 -44 -22z"/>
-                                        </g>
-                                    </svg>
-                                </span>
-                                <span class="time">10:30 AM</span>
-                            </div>
-                        </div>
-                        <div class="appointment-content">
-                            <div class="pet-info-brief">
-                                <img src="/Frontend/imagenes/img_luna.jpg" alt="Luna" class="pet-thumbnail">
-                                <div class="pet-details">
-                                    <h3 class="pet-name">Luna</h3>
-                                    <p class="appointment-type">Vacunación</p>
-                                    <p class="appointment-vet">Dr. Martínez</p>
-                                </div>
-                            </div>
-                            <div class="appointment-actions">
-                                <button class="btn btn-cancel">Cancelar cita</button>
-                                <button class="btn btn-primary">Modificar</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Cita 2 -->
-                    <div class="appointment-card">
-                        <div class="appointment-header">
-                            <div class="appointment-date">
-                                <span class="day">22</span>
-                                <span class="month">Mayo</span>
-                            </div>
-                            <div class="appointment-time">
-                                <span class="time-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="18" height="18" viewBox="0 0 148.000000 148.000000" preserveAspectRatio="xMidYMid meet">
-                                        <g transform="translate(0.000000,148.000000) scale(0.100000,-0.100000)" fill="#ffffff" stroke="none">
-                                        <path d="M635 1471 c-295 -47 -526 -252 -606 -536 -32 -112 -32 -278 0 -390 71 -253 263 -445 516 -516 112 -32 278 -32 390 0 253 71 445 263 516 516 29 103 31 277 5 375 -42 153 -82 202 -135 162 -33 -24 -32 -52 4 -150 157 -436 -250 -893 -710 -797 -232 48 -432 248 -480 480 -29 141 -11 268 57 405 101 200 324 339 545 340 115 0 264 -48 361 -117 54 -38 74 -41 102 -13 47 47 11 96 -120 164 -124 65 -313 98 -445 77z"/>
-                                        <path d="M696 1208 c-13 -19 -16 -61 -16 -255 0 -220 1 -234 20 -253 18 -18 33 -20 195 -20 162 0 177 2 195 20 11 11 20 29 20 40 0 11 -9 29 -20 40 -18 18 -33 20 -155 20 l-135 0 0 193 c0 215 -6 237 -60 237 -18 0 -34 -8 -44 -22z"/>
-                                        </g>
-                                    </svg>
-                                </span>
-                                <span class="time">16:00 PM</span>
-                            </div>
-                        </div>
-                        <div class="appointment-content">
-                            <div class="pet-info-brief">
-                                <img src="/Frontend/imagenes/img_simba.jpg" alt="Simba" class="pet-thumbnail">
-                                <div class="pet-details">
-                                    <h3 class="pet-name">Simba</h3>
-                                    <p class="appointment-type">Revisión general</p>
-                                    <p class="appointment-vet">Dra. López</p>
-                                </div>
-                            </div>
-                            <div class="appointment-actions">
-                                <button class="btn btn-cancel">Cancelar cita</button>
-                                <button class="btn btn-primary">Modificar</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Cita 3 -->
-                    <div class="appointment-card">
-                        <div class="appointment-header">
-                            <div class="appointment-date">
-                                <span class="day">03</span>
-                                <span class="month">Junio</span>
-                            </div>
-                            <div class="appointment-time">
-                                <span class="time-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="18" height="18" viewBox="0 0 148.000000 148.000000" preserveAspectRatio="xMidYMid meet">
-                                        <g transform="translate(0.000000,148.000000) scale(0.100000,-0.100000)" fill="#ffffff" stroke="none">
-                                        <path d="M635 1471 c-295 -47 -526 -252 -606 -536 -32 -112 -32 -278 0 -390 71 -253 263 -445 516 -516 112 -32 278 -32 390 0 253 71 445 263 516 516 29 103 31 277 5 375 -42 153 -82 202 -135 162 -33 -24 -32 -52 4 -150 157 -436 -250 -893 -710 -797 -232 48 -432 248 -480 480 -29 141 -11 268 57 405 101 200 324 339 545 340 115 0 264 -48 361 -117 54 -38 74 -41 102 -13 47 47 11 96 -120 164 -124 65 -313 98 -445 77z"/>
-                                        <path d="M696 1208 c-13 -19 -16 -61 -16 -255 0 -220 1 -234 20 -253 18 -18 33 -20 195 -20 162 0 177 2 195 20 11 11 20 29 20 40 0 11 -9 29 -20 40 -18 18 -33 20 -155 20 l-135 0 0 193 c0 215 -6 237 -60 237 -18 0 -34 -8 -44 -22z"/>
-                                        </g>
-                                    </svg>
-                                </span>
-                                <span class="time">12:15 PM</span>
-                            </div>
-                        </div>
-                        <div class="appointment-content">
-                            <div class="pet-info-brief">
-                                <img src="/Frontend/imagenes/img_rocky.jpg" alt="Rocky" class="pet-thumbnail">
-                                <div class="pet-details">
-                                    <h3 class="pet-name">Rocky</h3>
-                                    <p class="appointment-type">Peluquería</p>
-                                    <p class="appointment-vet">Estilista Rodríguez</p>
-                                </div>
-                            </div>
-                            <div class="appointment-actions">
-                                <button class="btn btn-cancel">Cancelar cita</button>
-                                <button class="btn btn-primary">Modificar</button>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
 
@@ -718,6 +615,7 @@
     <script src="Scripts/main.js"></script>
     <script src="Scripts/login.js"></script>
     <script src="Scripts/navigation.js"></script>
+    <script src="Scripts/appointmentsManager.js"></script>
     <script src="Scripts/petDelete.js"></script>
     <script src="Scripts/petManager.js"></script>
     <script src="Scripts/petView.js"></script>
