--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -54,25 +54,25 @@
 
         <div class="forma-caja register">
             <h2>Registrarse</h2>
-            <form action="#">
+            <form id="registro-form" action="#">
                 <div class="caja-input">
-                    <span class="icono"><img class="iconPerson" src="iconos/person.svg" alt="user"></span>
-                    <input type="text" required autocomplete="current-username">
-                    <label>Usuario</label>
+                    <span class="icono"><img class="iconPerson" src="iconos/person.svg" alt="email"></span>
+                    <input type="email" id="registro-email" required autocomplete="email">
+                    <label>Email</label>
                 </div>
                 <div class="caja-input">
-                    <span class="icono"><img class="lockClosed" src="iconos/lock-closed.svg" alt="lock-closed"></ion-icon></span>
-                    <input type="password" required autocomplete="current-password">
+                    <span class="icono"><img class="lockClosed" src="iconos/lock-closed.svg" alt="lock-closed"></span>
+                    <input type="password" id="registro-password" required autocomplete="new-password">
                     <label>Contraseña</label>
                 </div>
+                <div id="registro-mensaje" class="mensaje-error" style="display: none; color: red; margin-bottom: 10px;"></div>
                 <div class="recordar-olvidar">
-                    <label><input type="checkbox">Acepto los términos y condiciones</label>
+                    <label><input type="checkbox" id="registro-terminos" required>Acepto los términos y condiciones</label>
                 </div>
-                <button type="submit" class="boton-register">Registrarse</button>
+                <button type="submit" id="boton-registro" class="boton-register">Registrarse</button>
                 <div class="login-register">
                     <p>Ya tienes una cuenta? <a href="#" onclick="desactivar()">Iniciar sesión</a></p>
                 </div>
-
             </form>
         </div>
     </div>
@@ -524,5 +524,6 @@
     <script src="Scripts/navigation.js"></script>
     <script src="Scripts/app-init.js"></script>
     <script type="module" src="Scripts/APIS.js"></script>
+    <script type="module" src="Scripts/registro.js"></script>
 </body>
 </html>
