--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -144,7 +144,7 @@
                     <h1>Servicio único para tus mascotas</h1>
                     <p>Cuidamos de tu mascota todo el año con atención integral, bienestar personalizado y un equipo dedicado a su salud y felicidad. ¡Confía en nosotros!</p>
                     <div class="action-buttons">
-                        <a href="javascript:void(0)" id="pedir-cita-btn" class="btn btn-primary" data-page="appointments">
+                        <a href="#" id="pedir-cita-btn" class="btn btn-primary" onclick="abrir()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M8 2v4"></path>
                                 <path d="M16 2v4"></path>
@@ -153,7 +153,7 @@
                                 <path d="M16 19h6"></path>
                                 <path d="M19 16v6"></path>
                             </svg>                          
-                            Pedir cita</a>
+                            Iniciar sesión</a>
                         <a href="#" id="registrarse-start" class="btn btn-outline" onclick="activar(); abrir()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
