--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -275,9 +275,9 @@
                         <input type="text" id="pet-name" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label for="pet-type">Tipo</label>
+                        <label for="pet-type">Especie</label>
                         <select id="pet-type" class="form-control" required>
-                            <option value="">Seleccionar tipo</option>
+                            <option value="">Seleccionar especie</option>
                             <option value="Perro">Perro</option>
                             <option value="Gato">Gato</option>
                             <option value="Ave">Ave</option>
@@ -289,6 +289,13 @@
                     <div class="form-group">
                         <label for="pet-breed">Raza</label>
                         <input type="text" id="pet-breed" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="pet-weight">Peso (kg)</label>
+                        <div class="weight-input">
+                            <input type="number" id="pet-weight" class="form-control" min="0" step="0.1" required>
+                            <span class="input-suffix">kg</span>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="pet-age">Edad</label>
@@ -303,6 +310,10 @@
                     <div class="form-group">
                         <label for="pet-photo">Foto</label>
                         <input type="file" id="pet-photo" class="form-control" accept="image/*">
+                    </div>
+                    <div class="form-group">
+                        <label for="pet-notes">Notas especiales (opcional)</label>
+                        <textarea id="pet-notes" class="form-control" rows="3"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Guardar Mascota</button>
                 </form>
